tokyo-gateway/tokyo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tokyo-gateway
  namespace: gateway
  annotations:
      metallb.universe.tf/loadBalancerIPs: 192.168.1.230
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  addresses:
  - value: 192.168.1.230
    type: IPAddress
