tokyo-gateway/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-argocd-route
  namespace: gateway
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: argocd
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
  - name: tokyo-gateway
    namespace: gateway
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - "argocd.tokyo.home.arpa"
  - "argocd.tokyo"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
