tokyo-gateway/prometheus-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  # Name the ReferenceGrant
  name: allow-prometheus-route
  namespace: gateway
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    # The namespace of the HTTPRoute must be the same as the namespace of the Service you want to route to.  In this case, both are in the "kubex" namespace.
    namespace: kubex
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # Give the route a name
  name: prometheus-http-route
  # The namespace the route is deployed in.  This should be the same as the namespace of the Service you want to route to.
  namespace: kubex
spec:
  parentRefs:
  - name: tokyo-gateway
    namespace: gateway
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  # List of hostnames.  Must be DNS resolvable.
  - "prometheus.tokyo.home.arpa"
  - "prometheus.tokyo"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      # This is the name of the Service to route to
    - name: kubex-prometheus-server
      # And the port the service is listening on
      port: 9090
